--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,13 @@
             android:layout_weight="1"
             android:text="History"
             android:layout_marginStart="8dp" />
+        <Button
+            android:id="@+id/btnClearAll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Clear All"
+            android:layout_marginTop="12dp"/>
+
     </LinearLayout>
 
     <ListView
